using Avalonia.Controls;

namespace Mentor4U_Avalonia.Views.Controls;

public partial class InputControl : UserControl
{
    public InputControl()
    {
        InitializeComponent();
    }
}