using Avalonia.Controls;

namespace Mentor4U_Avalonia.Views;

public partial class StartWindow : Window
{
    public StartWindow()
    {
        InitializeComponent();
    }
}