using Avalonia.Controls;

namespace Mentor4U_Avalonia.Views.Windows;

public partial class AuthWindow : Window
{
    public AuthWindow()
    {
        InitializeComponent();
    }
}